# ml_pipeline_1

./: README.md  dvc.yaml  pyproject.toml  requirements-dev.txt
dvclive/: params.yaml
logs/: feature_engineering.logs
src/: data_ingestion.py  data_preprocessing.py  feature_engineering.py  model_building.py  model_evaluation.py
